--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ra-language-serbo",
   "version": "1.0.0",
-  "description": "Sebian translations for react-admin, the frontend framework for building admin applications on top of REST/GraphQL services",
+  "description": "Serbian translations for react-admin, the frontend framework for building admin applications on top of REST/GraphQL services",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
